--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li>Vegitables </li>
+		<li> Shampoo</li>
+		<li> MilkyBar </li>
+	</ol>
+	<ol>
+		<li>Taj Mahal </li>
+		<li> Mantralayam</li>
+		<li> Nayakanahatti </li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
