--- a/main.html
+++ b/main.html
@@ -9,13 +9,18 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li>Vegitables </li>
+		
+<li>Vegitables </li>
 		<li> Shampoo</li>
 		<li> MilkyBar </li>
-		<li>Taj Mahal </li>
-		<li> Mantralayam</li>
-		<li> Nayakanahatti </li>
+			
+		
+		
+		
 	</ol>
+	<ul> <li>Taj Mahal </li>
+		<li> Mantralayam</li>
+		<li> Nayakanahatti </li> </ul>
 
     <script type="text/javascript" src="./script.js">
 </script>
