--- a/main.html
+++ b/main.html
@@ -10,17 +10,17 @@
 	<!-- the entire body must be written by student -->
 	<ol>
 		
-<li>Vegitables </li>
-		<li> Shampoo</li>
-		<li> MilkyBar </li>
+<li>data</li>
+		<li>ns</li>
+		<li>test</li>
 			
 		
 		
 		
 	</ol>
-	<ul> <li>Taj Mahal </li>
-		<li> Mantralayam</li>
-		<li> Nayakanahatti </li> </ul>
+	<ul> <li>data </li>
+		<li>ns</li>
+		<li>test</li> </ul>
 
     <script type="text/javascript" src="./script.js">
 </script>
