--- a/main.html
+++ b/main.html
@@ -10,17 +10,21 @@
 	<!-- the entire body must be written by student -->
 	<ol>
 		
-<li>data</li>
-		<li>ns</li>
-		<li>test</li>
+		<li data-ns-test = "shoppingList">Book</li>
+		<li data-ns-test = "shoppingList">Mobile</li>
+		<li data-ns-test = "shoppingList">Watch</li>
+		
 			
 		
 		
 		
 	</ol>
-	<ul> <li>data </li>
-		<li>ns</li>
-		<li>test</li> </ul>
+	<ul>
+		<li data-ns-test = "holadyList">Dharamstala </li>
+		<li data-ns-test = "holadyList">Taj Mahal </li>
+		<li data-ns-test = "holadyList">Mantralayam </li>
+		
+	</ul>
 
     <script type="text/javascript" src="./script.js">
 </script>
