--- a/main.html
+++ b/main.html
@@ -20,9 +20,9 @@
 		
 	</ol>
 	<ul>
-		<li data-ns-test = "holadyList">Dharamstala </li>
-		<li data-ns-test = "holadyList">Taj Mahal </li>
-		<li data-ns-test = "holadyList">Mantralayam </li>
+		<li data-ns-test = "holidayList">Dharamstala </li>
+		<li data-ns-test = "holidayList">Taj Mahal </li>
+		<li data-ns-test = "holidayList">Mantralayam </li>
 		
 	</ul>
 
